--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "2.1.12"
+    "recharts": "^2.1.16",
+    "trpc": "^0.8.2",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
