--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.27.2",
     "format-number": "^3.0.0",
     "framer-motion": "^7.5.1",
-    "next": "^12.3.1",
+    "next": "^13.0.6",
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +27,7 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.6",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.6.4"
